# strongclaw

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  MANIFEST.in  MANIFEST.md  Makefile  QUICKSTART.md  README.md  SETUP_GUIDE.md  USAGE_GUIDE.md  memory-v2.1.md  memory-v2.md  next-steps.md  plan.md  plan2.md  pyproject.toml
.github/ci/: ci-gate-filters.yml  pr135-required-checks-trigger.txt
.github/scripts/: fresh_host_images.py
.github/workflows/: ci-gate.yml  compatibility-matrix.yml  dependency-submission.yml  devflow-contract.yml  e2e-acceptance.yml  fresh-host-acceptance.yml  fresh-host-cache-warm.yml  fresh-host-core.yml  harness.yml  memory-plugin-verification.yml  nightly.yml  plugin-verification.yml  release.yml  security.yml  upstream-merge-gate.yml  upstream-merge-validation.yml
.omx/plans/: launch-readiness-audit-report.md  launch-readiness-citation-verification.md  launch-readiness-decision-packet.md  launch-readiness-findings.yaml  launch-readiness-surface-manifest.yaml  launch-readiness-workflow-matrix.yaml
docs/testing/: README.md  authoring.md  operations.md
platform/compose/: docker-compose.aux-stack.ci-hosted-macos.yaml  docker-compose.aux-stack.yaml  docker-compose.browser-lab.ci-hosted-macos.yaml  docker-compose.browser-lab.yaml  docker-compose.langfuse.optional.yaml  docker-compose.ollama.optional.yaml
platform/configs/: source-allowlists.example.yaml
platform/docs/: ACP_WORKERS.md  ARCHITECTURE.md  BACKUP_AND_RECOVERY.md  BROWSER_LAB.md  CI_AND_SECURITY.md  CONTEXT_SERVICE.md  DEGRADATION.md  DEVFLOW.md  HOST_PLATFORMS.md  HYPERMEMORY.md  LINUX_MIGRATION.md  MEMORY_V2.md  MODEL_ROUTING.md  OBSERVABILITY.md  PLUGIN_INVENTORY.md  POLICY_ENGINE_AND_WRAPPERS.md  PRODUCTION_READINESS_CHECKLIST.md  SECRETS_AND_ENV.md  SECURITY_MODEL.md  TESTING_FRAMEWORK.md  TESTING_OPERATIONS.md
platform/examples/: openclaw-secretref-vault.json5
platform/launchd/: ai.openclaw.backup-create.plist.template  ai.openclaw.browserlab.plist.template  ai.openclaw.gateway.plist.template  ai.openclaw.maintenance.plist.template  ai.openclaw.sidecars.plist.template
platform/systemd/: openclaw-backup-create.service  openclaw-backup-create.timer  openclaw-backup-verify.service  openclaw-backup-verify.timer  openclaw-browserlab.service  openclaw-gateway.service  openclaw-maintenance.timer  openclaw-sidecars.service
repo/: README.md
scripts/: dev-env.sh
scripts/bootstrap/: bootstrap.sh  bootstrap_acpx.sh  bootstrap_browser_lab.sh  bootstrap_context.sh  bootstrap_fork.sh  bootstrap_host.sh  bootstrap_linux.sh  bootstrap_lossless_context_engine.sh  bootstrap_macos.sh  bootstrap_memory_plugin.sh  bootstrap_qmd.sh  bootstrap_sidecars.sh  bootstrap_varlock.sh  configure_openclaw_model_auth.sh  configure_varlock_env.sh  create_openclawsvc.sh  create_openclawsvc_macos.sh  doctor_host.sh  doctor_strongclaw.sh  enable_observability.sh  enable_telegram.sh  enable_whatsapp.sh  install.sh  install_host_services.sh  install_launchd_services.sh  preflight.sh  preflight_host.sh  preflight_linux.sh  preflight_macos.sh  render_openclaw_config.sh  run_harness_smoke.sh  setup.sh  validate_varlock_env.sh  verify_baseline.sh  verify_channels.sh  verify_hypermemory.sh  verify_memory_v2_tier1.sh  verify_observability.sh  verify_sidecars.sh
scripts/ci/: build_release_artifacts.sh  generate_sbom.sh  install_gitleaks.sh  install_syft.sh  pr135-required-checks-trigger.json  publish_github_release.sh  run_gitleaks_scan.sh  run_memory_plugin_verification.sh  run_nightly_validation.sh  run_repository_quality_gate.sh  run_security_stack.sh  run_setup_compatibility_smoke.sh  run_upstream_merge_validation.sh  sync_dev_environment.sh  verify_hypermemory_qdrant.sh  verify_memory_v2_qdrant.sh  verify_release_artifacts.sh  verify_strongclaw_hypermemory_plugin.sh  verify_strongclaw_memory_v2_plugin.sh  verify_vendored_memory_plugin.sh  write_coverage_summary.py
scripts/lib/: app_paths.sh  bootstrap_profiles.sh  clawops.sh  docker_runtime.sh  openclaw.sh  preferred_python.sh  rendered_openclaw_contract.sh  setup_state.sh  varlock.sh
scripts/ops/: check_loopback_bindings.sh  check_permissions.sh  launch_gateway_with_varlock.sh  launch_sidecars_dev.sh  launch_sidecars_with_varlock.sh  prune_qdrant_test_collections.sh  reset_dev_compose_state.sh  run_workflow.sh  status.sh  stop_sidecars.sh  stop_sidecars_dev.sh  sync_allowlists.sh
scripts/recovery/: backup_create.sh  backup_verify.sh  prune_retention.sh  restore_openclaw.sh  rotate_secrets.sh
scripts/workers/: prewarm_qmd.sh  reviewer_fixer_loop.sh  run_browser_lab_exfil_tests.sh  run_claude_review.sh  run_codex_session.sh  worktree_drop.sh  worktree_new.sh
security/codeql/: codeql-config.yml
security/gitleaks/: gitleaks.toml
security/semgrep/: semgrep.yml
security/trivy/: trivy.yaml
src/clawops/: __init__.py  __main__.py  acp_runner.py  acpx_adapter.py  allowlist_sync.py  app_paths.py  approval_dispatch.py  approvals.py  backend_registry.py  charts.py  cli.py  cli_roots.py  common.py  (+42 more)
tests/: conftest.py  test_acp_runner.py  test_allowlist_sync.py  test_app_paths.py  test_automation_surfaces.py  test_branding_surfaces.py  test_browser_lab_security.py  test_cli.py  test_common.py  test_config_cli.py  test_context_envelope.py  test_context_service.py  test_credential_broker.py  test_docs_parity.py  test_fresh_host_images.py  test_fresh_host_workflow.py  test_harness.py  test_hypermemory.py  test_hypermemory_lifecycle.py  test_hypermemory_observability.py  test_hypermemory_parser.py  test_hypermemory_plugin.py  test_hypermemory_providers.py  test_hypermemory_qdrant_backend.py  test_hypermemory_qdrant_integration.py  test_memory_tools.py  test_memory_v2.py  test_memory_v2_observability.py  test_memory_v2_plugin.py  test_memory_v2_providers.py  test_memory_v2_qdrant_backend.py  test_memory_v2_qdrant_integration.py  test_memory_v2_sparse.py  test_observability.py  test_op_journal.py  test_openclaw_config.py  test_openclaw_shell_scripts.py  test_platform_compat.py  test_platform_verify.py  test_plugin_verification_workflow.py  (+14 more)
(+534 files in other folders)
