[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawops"
version = "0.1.0"
description = "Companion ops, policy, context, and harness tooling for a hardened OpenClaw platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "json5>=0.12.0",
  "PyYAML>=6.0",
  "requests>=2.31.0",
  "matplotlib>=3.8.0",
  "opentelemetry-api>=1.29.0",
  "opentelemetry-sdk>=1.29.0",
  "opentelemetry-exporter-otlp>=1.29.0",
  "sentence-transformers==3.4.1; sys_platform == 'darwin' and platform_machine == 'x86_64' and python_version >= '3.12' and python_version < '3.13'",
  "sentence-transformers==5.3.0; ((((sys_platform == 'darwin' and (platform_machine == 'arm64' or platform_machine == 'aarch64')) or (sys_platform == 'linux' and platform_machine == 'x86_64') or (sys_platform == 'linux' and platform_machine == 'aarch64') or (sys_platform == 'linux' and platform_machine == 'arm64')) and python_version >= '3.12' and python_version < '3.14'))",
  "numpy<2; sys_platform == 'darwin' and platform_machine == 'x86_64' and python_version >= '3.12' and python_version < '3.13'",
  "torch==2.8.0; (((sys_platform == 'darwin' and (platform_machine == 'arm64' or platform_machine == 'aarch64')) or (sys_platform == 'linux' and platform_machine == 'x86_64') or (sys_platform == 'linux' and platform_machine == 'aarch64') or (sys_platform == 'linux' and platform_machine == 'arm64')) and python_version >= '3.12' and python_version < '3.14')",
  "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64' and python_version >= '3.12' and python_version < '3.13'",
]
authors = [
  {name = "Juan P. Sugg", email = "juanpedrosugg@gmail.com"}
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=6.2.1",
  "build>=1.3.0",
  "black>=26.3.1",
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "ruff>=0.15.6",
  "pyright>=1.1.408",
  "isort>=8.0.1",
  "twine>=6.2.0",
  "types-requests>=2.32.4.20260107",
  "types-PyYAML>=6.0.12.20250915",
  "matplotlib-stubs>=0.3.11",
]

[project.scripts]
clawops = "clawops.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"clawops.hypermemory" = ["resources/*.yaml", "resources/*.sql"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "B",
]
ignore = [
  "E501",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["clawops"]
src_paths = ["src", "tests"]

[tool.mypy]
files = ["src"]
python_version = "3.12"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
pretty = true
show_error_codes = true
warn_unused_configs = true
cache_dir = ".mypy_cache"

[tool.pyright]
include = ["src"]
exclude = [
  "**/__pycache__",
  ".venv",
  "build",
  "dist",
  "tests",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportMissingTypeStubs = false
reportUnsupportedDunderAll = "none"

[tool.pytest.ini_options]
testpaths = ["tests/suites"]
python_files = ["test_*.py"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "unit: isolated unit tests",
  "integration: cross-module and service-shaped tests",
  "contract: repository and artifact contract checks",
  "hypermemory: hypermemory-related coverage",
  "qdrant: tests requiring or exercising qdrant behavior",
  "network_local: tests that open local sockets or local HTTP servers",
]
